testdata/baselines/reference/submodule/conformance/jsDeclarationsClassExtendsVisibility.errors.txt
bar.js(2,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
cls.js(2,7): error TS2451: Cannot redeclare block-scoped variable 'Strings'.
cls.js(7,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
cls.js(7,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
cls.js(8,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
cls.js(8,16): error TS2451: Cannot redeclare block-scoped variable 'Strings'.


==== cls.js (5 errors) ====
    const Bar = require("./bar");
    const Strings = {
          ~~~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'Strings'.
        a: "A",
        b: "B"
    };
    class Foo extends Bar {}
    module.exports = Foo;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    module.exports.Strings = Strings;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
                   ~~~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'Strings'.
==== bar.js (1 errors) ====
    class Bar {}
    module.exports = Bar;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.